# currency_exchange

./: .env.example  .gitignore  pyproject.toml
alembic/: env.py
src/: base_repository.py  config.py  database.py  main.py  unitofwork.py
src/auth/: models.py  repository.py  router.py  schemas.py
src/currency/: router.py
