[tool.poetry]
name = "currency-exchange"
version = "0.1.0"
description = ""
authors = ["Anton Ozerov <ozerovanton17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.4"}
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
pydantic-settings = "^2.6.1"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
